typecheck/tests/micro/good/bi_experssion_identi_literal.c
//binary expression for literals and identifier
void main(void)
{
	//good
	int i;
	i+1;
	i-1;
	i*1;
	i/1;
	i=1;
	i==1;
	i!=1;
	i>1;
	i<1;
	i>=1;
	i<=1;
return;

}